syntax = "proto3";

option java_multiple_files = true;

option java_package = "gRPC.assignment3_1.protobuf";

service RetrieveInfo{
  rpc retrieveRegNum(RequestText) returns(ResponseText);
  rpc retrievePackage(RequestText) returns(ResponseText);
}

message RequestText{
  string input_text = 1;
}

message ResponseText{
  string output_text = 1;
}